--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Voting</title>
-    <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-<div class="container">
-    <h1>Voting</h1>
-    <div id="voting"></div>
-</div>
+
+<section class="section">
+    <div class="container">
+        <h1 class="title">Voting</h1>
+        <div id="voting"></div>
+    </div>
+</section>
 <script src="/client.js"></script>
 </body>
 </html>
